k8s/local/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-imagegallery-api
  namespace: imagegallery
spec:
  type: ClusterIP
  selector:
    app: imagegallery-api
  ports:
    - port: 5075
      targetPort: 5075

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-imagegallery-api
  namespace: imagegallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagegallery-api
  template:
    metadata:
      labels:
        app: imagegallery-api
    spec:
      containers:
        - name: imagegallery-api
          image: imagegallery-api
          imagePullPolicy: Never
          ports:
            - containerPort: 5075

          volumeMounts:
            - name: image-storage
              mountPath: /app/wwwroot/Images

          startupProbe:
            httpGet:
              path: /health/live
              port: 5075
            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5075
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health/live
              port: 5075
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: image-storage
          hostPath:
            path: "/run/desktop/mnt/host/d/home.jonathan/Documents/Pluralsight/ASP.NET CORE Securing-oauth2-oidc-v2/04/demos/start/images"
            type: Directory
